# PPS-22-srs

./: .gitignore  .init-behavior.md  .init-light-sensor.md  .mergify.yml  .scalafix.conf  .scalafmt.conf  404.html  CHANGELOG.md  GIANO.md  LICENSE  README.md  build.sbt  index.html  package-lock.json  package.json  renovate.json  sitemap.xml  test-run.sbatch
python/: README.md  create_proto_definitions.sh  flake.nix  index.md  pyproject.toml  test.py
python/resources/configurations/: exploration.yml  exploration10.yml  exploration5.yml  obstacle-avoidance-simple.yml  obstacle-avoidance-spin.yml  obstacle-avoidance.yml  phototaxis.yml  phototaxis_OK_easy.yml
python/src/: qObstacleAvoidance.ipynb
python/src/agent/: dqagent.py  qagent.py  scala_dqagent.py
python/src/agents/: q_learning.py  qagent.py
python/src/environment/: abstract_env.py  env.py  exploration_env.py  obstacle_avoidance_env.py
python/src/environment/deepqlearning/: exploration_env.py  obstacle_avoidance_env.py  phototaxis_env.py
python/src/environment/qlearning/: exploration_env.py  obstacle_avoidance_env.py  (+1 more)
python/src/evaluation/: agent_evaluation.py  q_agent_evaluation.py
python/src/notebooks/: dqlearning.ipynb  obstacle-avoidance.ipynb  qObstacleAvoidance.ipynb  qPhototaxis.ipynb  ql_exploration.ipynb  qlearning.ipynb  show_training_results.ipynb
python/src/proto/: ping_pb2.py  ping_pb2_grpc.py  rl_client.py  rl_launcher.py  test.py
python/src/rl/: rl_client.py
python/src/scripts/: generate_environments.py  phototaxis-qtable.py  qtable.py  train-dqagent.py  train-qagent.py
python/src/training/: dqlearning.py  dqnetwork.py  general_qlearning.py  multi_agent_dqlearning.py  qlearning.py
python/src/utils/: dict.py  log.py  plotting.py  reader.py  reproducibility.py  video.py
python/tests/: example_test.py
(+3298 files in other folders)
